--- a/index.html
+++ b/index.html
@@ -1,205 +1,128 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8">
-  <title>合同会社WaJu 公式サイト</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>WaJu - 公開ページ</title>
+  <meta name="color-scheme" content="light dark">
   <style>
-    /* ===== Base ===== */
-    html, body { margin:0; padding:0; min-height:100%; }
-    body { font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans JP", "Hiragino Kaku Gothic ProN", Meiryo, sans-serif; }
-    main#site-main { padding:2rem 1.25rem; min-height:60vh; background:#f9fafb; }
-    section { margin-bottom:2rem; padding:1rem; background:#fff; border-radius:8px; box-shadow:0 1px 3px rgba(0,0,0,0.08); }
-
-    /* ===== Header/Footer visual (scoped) ===== */
-    #site-header, #site-footer { isolation:isolate; }
-    .hfbar { display:flex; align-items:center; gap:var(--gap,16px); border-radius:0; }
-    .hfbar.hf-row { justify-content:flex-start; }
-    .hfbar.hf-column { flex-direction:column; align-items:stretch; }
-    .slot { display:flex; align-items:center; }
-    .slot.brand { flex:0 0 auto; }
-    .slot.nav { flex:1 1 auto; }
-    .hf-brand { display:flex; align-items:center; gap:8px; }
-    .hf-brand img { height:auto; max-height:inherit; }
-    .hf-nav { display:flex; gap:var(--gap,16px); flex-wrap:wrap; width:100%; }
-    .hf-nav a { color:inherit; text-decoration:none; border-radius:6px; padding:0 2px; }
-    .hf-copy { display:flex; width:100%; }
-
-    /* Mobile nav */
-    .mobile-toggle { display:none; background:transparent; border:1px solid rgba(255,255,255,.5); border-radius:8px; padding:6px 8px; color:inherit; }
-    .nav-mobile { display:none; flex-direction:column; gap:10px; padding:10px 0; width:100%; }
-    .nav-mobile a { padding:6px 2px; }
-
-    @media (max-width: 768px) {
-      .hfbar.hf-row { flex-wrap:wrap; }
-      .nav-desktop { display:none !important; }
-      .mobile-toggle { display:block; margin-left:auto; }
-      .nav-mobile.open { display:flex; }
+    :root{--container:1120px}
+    *{box-sizing:border-box}
+    body{margin:0;font-family:system-ui,-apple-system,'Segoe UI',Roboto,'Helvetica Neue',Arial,'Noto Sans JP','Hiragino Kaku Gothic ProN',Meiryo,sans-serif;color:#0f172a;background:#fff}
+    a{color:inherit;text-decoration:none}
+    main{min-height:40vh}
+    .container{max-width:var(--container);margin:0 auto;padding:16px}
+    .hfbar{display:flex;align-items:center;gap:var(--gap,16px)}
+    .hfbar.hf-row{justify-content:flex-start}
+    .hfbar.hf-column{flex-direction:column;align-items:stretch}
+    .hf-brand{display:flex;align-items:center;gap:8px}
+    .hf-nav{display:flex;gap:var(--gap,16px);flex-wrap:wrap;width:100%}
+    .slot{display:flex;align-items:center}
+    .slot.brand{flex:0 0 auto}
+    .slot.nav{flex:1 1 auto}
+    .hf-copy{display:flex;width:100%}
+    /* demo content */
+    .dummy{background:#f8fafc;border:1px solid #e2e8f0;border-radius:12px;padding:24px;margin:16px auto}
+    @media (max-width:640px){
+      .container{padding:12px}
+      :root{--container:100%}
     }
   </style>
 </head>
 <body>
-  <!-- Mount points -->
-  <header id="site-header"></header>
-
-  <main id="site-main">
-    <section>
-      <h2>ダミーセクション</h2>
-      <p>ここにページ編集の内容が反映されます（フック用意済み）。</p>
-    </section>
+  <div id="site-header"></div>
+  <main id="page-content">
+    <div class="container">
+      <div class="dummy">
+        <h2>ダミーセクション</h2>
+        <p>ここにページ編集の内容が反映されます（フック用意済み）。</p>
+      </div>
+    </div>
   </main>
-
-  <footer id="site-footer"></footer>
+  <div id="site-footer"></div>
 
   <script type="module">
-    // ---- Supabase init (guard against multiple instances) ----
-    let supabase;
-    if (!window.__supabase) {
-      const { createClient } = await import("https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm");
-      window.__supabase = createClient(
-        "https://htnmjsqgoapvuanrsuma.supabase.co",
-        "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imh0bm1qc3Fnb2FwdnVhbnJzdW1hIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTUzMzI3MDEsImV4cCI6MjA3MDkwODcwMX0.1AACTWZmChfmIIfBad0sf-hLV2bnaUt7bVURXnd0uKA"
-      );
-    }
-    supabase = window.__supabase;
+    const { createClient } = await import("https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm");
+    const sb = createClient(
+      "https://htnmjsqgoapvuanrsuma.supabase.co",
+      "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imh0bm1qc3Fnb2FwdnVhbnJzdW1hIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTUzMzI3MDEsImV4cCI6MjA3MDkwODcwMX0.1AACTWZmChfmIIfBad0sf-hLV2bnaUt7bVURXnd0uKA"
+    );
+    const $ = s => document.querySelector(s);
+    const toJustify = p => p==='left'?'flex-start':p==='right'?'flex-end':'center';
+    const num = (v,f)=>{const n=Number(v);return Number.isFinite(n)&&n>0?n:f};
+    const withFallback = s => !s ? "" : (/\b(sans-serif|serif|monospace)\b/i.test(s) ? s : `${s}, sans-serif`);
+    const bgParts = (row, def) => (row.bg_gradient && row.bg_gradient.trim())
+        ? {bgColor:def, bgImage:row.bg_gradient}
+        : {bgColor:(row.bg_color && row.bg_color.trim())?row.bg_color:def, bgImage:"none"};
 
-    // ---- Helpers ----
-    const $ = (q, r=document) => r.querySelector(q);
-    const toJustify = (p) => (p === "left" ? "flex-start" : p === "right" ? "flex-end" : "center");
-    const isUrl = (s) => /^(https?:\/\/|\/)/.test(s || "");
-    const bgOf = (d) => (d.bg_gradient && d.bg_gradient.trim()) ? d.bg_gradient : (d.bg_color || "#0f172a");
-    const safeBarHeight = (v, fallback) => { const n = Number(v); return Number.isFinite(n) && n > 0 ? n : fallback; };
-    const num = (v, f) => { const n = Number(v); return Number.isFinite(n) && n > 0 ? n : f; };
-
-    // ---- Builders (per-element font-sizes + per-area font-family) ----
-    function headerHTML(d, menus) {
-      const items = (menus || [])
-        .filter(m => m.is_active && m.show_in_header)
-        .map(m => `<a href="${m.href || '#'}">${m.title}</a>`)
-        .join("");
-
-      const companyFs = num(d.header_company_size, num(d.font_size, 14));
-      const navFs     = num(d.header_nav_size,     num(d.font_size, 14));
-
-      const brandInner = `
-        ${isUrl(d.logo_url) ? `<img src="${d.logo_url}" alt="logo" onerror="this.style.display='none'" style="max-height:${safeBarHeight(d.logo_height || d.bar_height, 60)}px">` : ""}
-        <span style="color:${d.company_color};font-weight:${d.company_weight};font-size:${companyFs}px">${d.company_name || ""}</span>
-      `;
-
-      const brandWrap = `<div class="slot brand" style="justify-content:${toJustify(d.company_alignment)}">
-        <div class="hf-brand">${brandInner}</div>
-      </div>`;
-
-      const navDesktop = `<nav class="hf-nav nav-desktop" style="color:${d.nav_color};font-weight:${d.nav_weight};justify-content:${toJustify(d.nav_alignment)};font-size:${navFs}px">${items}</nav>`;
-      const navMobile  = `<div class="nav-mobile" id="nav-mobile" style="color:${d.nav_color};font-weight:${d.nav_weight};font-size:${navFs}px">${items}</div>`;
-      const toggleBtn  = `<button class="mobile-toggle" id="nav-toggle" aria-expanded="false" aria-controls="nav-mobile">メニュー</button>`;
-      const navWrap = `<div class="slot nav" style="justify-content:${toJustify(d.nav_alignment)}">${navDesktop}${toggleBtn}${navMobile}</div>`;
-
-      const cls = d.layout_mode === "column" ? "hfbar hf-column" : "hfbar hf-row";
-      const barFs = num(d.font_size, 14);
-      const h  = safeBarHeight(d.bar_height, 60);
-      const pad = d.padding || "8px 12px";
-      const gap = num(d.link_spacing, 16);
-      const fixed = d.header_fixed ? `position:fixed;top:0;left:0;right:0;z-index:30;` : ``;
-      const ff = d.header_font_family ? `font-family:${d.header_font_family};` : ``;
-
-      return `<div class="${cls}" style="${fixed}${ff}background:${bgOf(d)};font-size:${barFs}px;height:${h}px;padding:${pad};--gap:${gap}px">
-        ${brandWrap}${navWrap}
-      </div>`;
-    }
-
-    function footerHTML(d, menus) {
-      const items = (menus || [])
-        .filter(m => m.is_active && m.show_in_footer)
-        .map(m => `<a href="${m.href || '#'}">${m.title}</a>`)
-        .join("");
-
-      const copyFs = num(d.footer_copy_size, num(d.font_size, 14));
-      const navFs  = num(d.footer_nav_size,  num(d.font_size, 14));
-
-      const nav = `<nav class="hf-nav" style="color:${d.nav_color_footer};font-weight:${d.nav_weight_footer};justify-content:${toJustify(d.nav_alignment_footer)};font-size:${navFs}px">${items}</nav>`;
-      const copy = `<div class="hf-copy" style="color:${d.footer_color};font-weight:${d.footer_weight || 'normal'};justify-content:${toJustify(d.footer_alignment)};font-size:${copyFs}px">${d.footer_text || ""}</div>`;
-
-      let inner = "";
-      if (d.layout_mode === "row") inner = `${copy}${nav}`;
-      else if (d.layout_mode === "nav-top") inner = `${nav}${copy}`;
-      else inner = `${copy}${nav}`;
-
-      const cls = d.layout_mode === "row" ? "hfbar hf-row" : "hfbar hf-column";
-      const barFs = num(d.font_size, 14);
-      const h  = safeBarHeight(d.bar_height, 60);
-      const pad = d.padding || "8px 12px";
-      const gap = num(d.link_spacing, 16);
-      const fixed = d.footer_fixed ? `position:fixed;left:0;right:0;bottom:0;z-index:20;` : ``;
-      const ff = d.footer_font_family ? `font-family:${d.footer_font_family};` : ``;
-
-      return `<div class="${cls}" style="${fixed}${ff}background:${bgOf(d)};font-size:${barFs}px;height:${h}px;padding:${pad};--gap:${gap}px">
-        ${inner}
-      </div>`;
-    }
-
-    // ---- Data loaders ----
-    async function loadMenus() {
-      const { data, error } = await supabase
-        .from("public_menus")
-        .select("*")
-        .order("sort_order", { ascending: true });
-      if (error) { console.warn("menus error:", error); return []; }
-      return data || [];
-    }
-
-    async function loadHF(area) {
-      const { data, error } = await supabase
-        .from("hf_settings")
-        .select("*")
-        .eq("area", area)
-        .single();
-      if (error) { console.warn("hf_settings error:", area, error); return {}; }
-      return data || {};
-    }
-
-    // ---- Mount ----
-    (async () => {
-      const [menus, header, footer] = await Promise.all([
-        loadMenus(),
-        loadHF("header"),
-        loadHF("footer")
+    async function load(){
+      const [{data:menus},{data:hdr},{data:ftr}] = await Promise.all([
+        sb.from("public_menus").select("*").order("sort_order", {ascending:true}),
+        sb.from("hf_settings").select("*").eq("area","header").single(),
+        sb.from("hf_settings").select("*").eq("area","footer").single()
       ]);
-      document.querySelector("#site-header").innerHTML = headerHTML(header, menus);
-      document.querySelector("#site-footer").innerHTML = footerHTML(footer, menus);
+      renderHeader(hdr||{}, menus||[]);
+      renderFooter(ftr||{}, menus||[]);
+      adjustOffsets(hdr||{}, ftr||{});
+      window.addEventListener('resize', ()=>adjustOffsets(hdr||{}, ftr||{}));
+    }
 
-      // Fixed header / footer のときだけ本文の上下に余白を加える（重なり防止）
-      if (header && header.header_fixed) {
-        const ht = safeBarHeight(header.bar_height, 60);
-        document.body.style.paddingTop = `${ht}px`;
-      } else {
-        document.body.style.paddingTop = "";
-      }
-      if (footer && footer.footer_fixed) {
-        const hb = safeBarHeight(footer.bar_height, 60);
-        document.body.style.paddingBottom = `${hb}px`;
-      } else {
-        document.body.style.paddingBottom = "";
-      }
+    function renderHeader(d, menus){
+      const items = (menus||[]).filter(m=>m.is_active && m.show_in_header).map(m=>`<a href="${m.href||'#'}">${m.title}</a>`).join("");
+      const {bgColor,bgImage} = bgParts(d, "#0f172a");
+      const ff = d.header_font_family ? `font-family:${withFallback(d.header_font_family)};` : "";
+      const cls = d.layout_mode==="column" ? "hfbar hf-column" : "hfbar hf-row";
+      $("#site-header").innerHTML = `
+        <div class="${cls}" style="${ff}
+            --gap:${num(d.link_spacing,16)}px;
+            background-color:${bgColor} !important;
+            background-image:${bgImage==='none'?'none':bgImage} !important;
+            height:${num(d.bar_height,60)}px; padding:${d.padding||'8px 12px'};">
+          <div class="slot brand" style="${d.company_alignment==='left'?'margin-right:auto':d.company_alignment==='center'?'margin:0 auto':'margin-left:auto'}">
+            <div class="hf-brand">
+              ${d.logo_url?`<img src="${d.logo_url}" alt="logo" onerror="this.style.display='none'" style="max-height:${num(d.logo_height||d.bar_height,60)}px">`:""}
+              <span style="color:${d.company_color};font-weight:${d.company_weight};font-size:${num(d.header_company_size,18)}px">${d.company_name||""}</span>
+            </div>
+          </div>
+          <div class="slot nav">
+            <nav class="hf-nav" style="justify-content:${toJustify(d.nav_alignment)};color:${d.nav_color};font-weight:${d.nav_weight};font-size:${num(d.header_nav_size,14)}px">${items}</nav>
+          </div>
+        </div>`;
+      if(d.header_fixed){ const el=$("#site-header").firstElementChild; el.style.position="sticky"; el.style.top="0"; el.style.zIndex="5"; }
+    }
 
-      // Mobile hamburger
-      const toggle = document.getElementById("nav-toggle");
-      const mobile = document.getElementById("nav-mobile");
-      if (toggle && mobile) {
-        toggle.addEventListener("click", () => {
-          const open = mobile.classList.toggle("open");
-          toggle.setAttribute("aria-expanded", open ? "true" : "false");
-        });
-      }
-    })();
+    function renderFooter(d, menus){
+      const items = (menus||[]).filter(m=>m.is_active && m.show_in_footer).map(m=>`<a href="${m.href||'#'}">${m.title}</a>`).join("");
+      const {bgColor,bgImage} = bgParts(d, "#0f172a");
+      const ff = d.footer_font_family ? `font-family:${withFallback(d.footer_font_family)};` : "";
+      const cls = d.layout_mode==="row" ? "hfbar hf-row" : "hfbar hf-column";
+      const inner = d.layout_mode==="row"
+        ? `<div class="hf-copy" style="color:${d.footer_color};font-weight:${d.footer_weight||'normal'};justify-content:${toJustify(d.footer_alignment)};font-size:${num(d.footer_copy_size,14)}px">${d.footer_text||""}</div>
+           <nav class="hf-nav" style="justify-content:${toJustify(d.nav_alignment_footer)};color:${d.nav_color_footer};font-weight:${d.nav_weight_footer};font-size:${num(d.footer_nav_size,14)}px">${items}</nav>`
+        : (d.layout_mode==="nav-top"
+          ? `<nav class="hf-nav" style="justify-content:${toJustify(d.nav_alignment_footer)};color:${d.nav_color_footer};font-weight:${d.nav_weight_footer};font-size:${num(d.footer_nav_size,14)}px">${items}</nav>
+             <div class="hf-copy" style="color:${d.footer_color};font-weight:${d.footer_weight||'normal'};justify-content:${toJustify(d.footer_alignment)};font-size:${num(d.footer_copy_size,14)}px">${d.footer_text||""}</div>`
+          : `<div class="hf-copy" style="color:${d.footer_color};font-weight:${d.footer_weight||'normal'};justify-content:${toJustify(d.footer_alignment)};font-size:${num(d.footer_copy_size,14)}px">${d.footer_text||""}</div>
+             <nav class="hf-nav" style="justify-content:${toJustify(d.nav_alignment_footer)};color:${d.nav_color_footer};font-weight:${d.nav_weight_footer};font-size:${num(d.footer_nav_size,14)}px">${items}</nav>`);
+      $("#site-footer").innerHTML = `
+        <div class="${cls}" style="${ff}
+            --gap:${num(d.link_spacing,16)}px;
+            background-color:${bgColor} !important;
+            background-image:${bgImage==='none'?'none':bgImage} !important;
+            height:${num(d.bar_height,60)}px; padding:${d.padding||'8px 12px'};">
+          ${inner}
+        </div>`;
+      if(d.footer_fixed){ const el=$("#site-footer").firstElementChild; el.style.position="fixed"; el.style.left="0"; el.style.right="0"; el.style.bottom="0"; }
+    }
 
-    // ---- Page editor hook ----
-    window.updateMain = (html) => { document.getElementById("site-main").innerHTML = html; };
-    window.addEventListener("page:update", (ev) => {
-      if (ev?.detail?.html != null) {
-        document.getElementById("site-main").innerHTML = ev.detail.html;
-      }
-    });
+    function adjustOffsets(hdr, ftr){
+      const header = $("#site-header").firstElementChild;
+      const footer = $("#site-footer").firstElementChild;
+      document.body.style.paddingTop = (hdr && hdr.header_fixed && header) ? header.getBoundingClientRect().height + "px" : "";
+      document.body.style.paddingBottom = (ftr && ftr.footer_fixed && footer) ? footer.getBoundingClientRect().height + "px" : "";
+    }
+
+    load();
   </script>
 </body>
 </html>
