--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     body{margin:0;font-family:system-ui,-apple-system,'Segoe UI',Roboto,'Helvetica Neue',Arial,'Noto Sans JP','Hiragino Kaku Gothic ProN',Meiryo,sans-serif;color:#0f172a;background:#fff}
     a{color:inherit;text-decoration:none}
     main{min-height:40vh}
-    .container{max-width:var(--container);margin:0 auto;padding:16px}
-    .hfbar{display:flex;align-items:center;gap:var(--gap,16px);width:100%}
+    .container{max-width:var(--container);margin:0 auto;padding:0 16px}
+    .hf-wrap{width:100%}
+    .hfbar{display:flex;align-items:center;gap:var(--gap,16px);width:100%;padding:8px 0}
     .hfbar.hf-row{justify-content:flex-start}
     .hfbar.hf-column{flex-direction:column;align-items:stretch}
     .hf-brand{display:flex;align-items:center;gap:8px}
@@ -24,13 +25,13 @@
     /* demo content */
     .dummy{background:#f8fafc;border:1px solid #e2e8f0;border-radius:12px;padding:24px;margin:16px auto}
     @media (max-width:640px){
-      .container{padding:12px}
+      .container{padding:0 12px}
       :root{--container:100%}
     }
   </style>
 </head>
 <body>
-  <div id="site-header"></div>
+  <header id="site-header" class="hf-wrap"></header>
   <main id="page-content">
     <div class="container">
       <div class="dummy">
@@ -39,7 +40,7 @@
       </div>
     </div>
   </main>
-  <div id="site-footer"></div>
+  <footer id="site-footer" class="hf-wrap"></footer>
 
   <script type="module">
     const { createClient } = await import("https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm");
@@ -67,7 +68,7 @@
       ]);
       renderHeader(hdr||{}, menus||[]);
       renderFooter(ftr||{}, menus||[]);
-      adjustOffsets(ftr||{}); // ヘッダーは sticky なので余白調整不要
+      adjustOffsets(ftr||{}); // 上余白は不要（ヘッダー sticky）
       window.addEventListener('resize', ()=>adjustOffsets(ftr||{}));
     }
 
@@ -76,28 +77,30 @@
       const {bgColor,bgImage} = bgParts(d, "#0f172a");
       const ff = d.header_font_family ? `font-family:${withFallback(d.header_font_family)};` : "";
       const cls = d.layout_mode==="column" ? "hfbar hf-column" : "hfbar hf-row";
-      const padding = d.padding && d.padding.trim() ? d.padding : "8px 12px";
+      const paddingY = (d.padding && d.padding.trim()) ? d.padding.split(' ')[0] : "8px 0";
+      const brandJustifyMargins = (align)=> align==='left'?'margin-right:auto':(align==='center'?'margin:0 auto':'margin-left:auto');
       const backgroundShorthand = (bgImage==='none') ? bgColor : `${bgImage}, ${bgColor}`;
+
       $("#site-header").innerHTML = `
-        <div class="${cls}" style="${ff}
-            --gap:${num(d.link_spacing,16)}px;
-            background:${backgroundShorthand} !important;
-            background-color:${bgColor} !important;
-            background-image:${bgImage==='none'?'none':bgImage} !important;
-            height:${num(d.bar_height,60)}px; padding:${padding};">
-          <div class="slot brand" style="${d.company_alignment==='left'?'margin-right:auto':d.company_alignment==='center'?'margin:0 auto':'margin-left:auto'}">
-            <div class="hf-brand">
-              ${d.logo_url?`<img src="${d.logo_url}" alt="logo" onerror="this.style.display='none'" style="max-height:${num(d.logo_height||d.bar_height,60)}px">`:""}
-              <span style="color:${d.company_color};font-weight:${d.company_weight};font-size:${num(d.header_company_size,18)}px">${d.company_name||""}</span>
+        <div class="hf-bg" style="background:${backgroundShorthand} !important;background-color:${bgColor} !important;background-image:${bgImage==='none'?'none':bgImage} !important;">
+          <div class="container">
+            <div class="${cls}" style="${ff};--gap:${num(d.link_spacing,16)}px; padding:${paddingY}; height:${num(d.bar_height,60)}px;">
+              <div class="slot brand" style="${brandJustifyMargins(d.company_alignment)}">
+                <div class="hf-brand">
+                  ${d.logo_url?`<img src="${d.logo_url}" alt="logo" onerror="this.style.display='none'" style="max-height:${num(d.logo_height||d.bar_height,60)}px">`:""}
+                  <span style="color:${d.company_color};font-weight:${d.company_weight};font-size:${num(d.header_company_size,18)}px">${d.company_name||""}</span>
+                </div>
+              </div>
+              <div class="slot nav">
+                <nav class="hf-nav" style="justify-content:${toJustify(d.nav_alignment)};color:${d.nav_color};font-weight:${d.nav_weight};font-size:${num(d.header_nav_size,14)}px">${items}</nav>
+              </div>
             </div>
           </div>
-          <div class="slot nav">
-            <nav class="hf-nav" style="justify-content:${toJustify(d.nav_alignment)};color:${d.nav_color};font-weight:${d.nav_weight};font-size:${num(d.header_nav_size,14)}px">${items}</nav>
-          </div>
         </div>`;
+
       if(d.header_fixed){
-        const el=$("#site-header").firstElementChild;
-        el.style.position="sticky"; el.style.top="0"; el.style.zIndex="5";
+        const wrap=$("#site-header").firstElementChild;
+        wrap.style.position="sticky"; wrap.style.top="0"; wrap.style.zIndex="5";
       }
     }
 
@@ -106,8 +109,9 @@
       const {bgColor,bgImage} = bgParts(d, "#0f172a");
       const ff = d.footer_font_family ? `font-family:${withFallback(d.footer_font_family)};` : "";
       const cls = d.layout_mode==="row" ? "hfbar hf-row" : "hfbar hf-column";
-      const padding = d.padding && d.padding.trim() ? d.padding : "8px 12px";
+      const paddingY = (d.padding && d.padding.trim()) ? d.padding.split(' ')[0] : "8px 0";
       const backgroundShorthand = (bgImage==='none') ? bgColor : `${bgImage}, ${bgColor}`;
+
       const inner = d.layout_mode==="row"
         ? `<div class="hf-copy" style="color:${d.footer_color};font-weight:${d.footer_weight||'normal'};justify-content:${toJustify(d.footer_alignment)};font-size:${num(d.footer_copy_size,14)}px">${d.footer_text||""}</div>
            <nav class="hf-nav" style="justify-content:${toJustify(d.nav_alignment_footer)};color:${d.nav_color_footer};font-weight:${d.nav_weight_footer};font-size:${num(d.footer_nav_size,14)}px">${items}</nav>`
@@ -116,26 +120,26 @@
              <div class="hf-copy" style="color:${d.footer_color};font-weight:${d.footer_weight||'normal'};justify-content:${toJustify(d.footer_alignment)};font-size:${num(d.footer_copy_size,14)}px">${d.footer_text||""}</div>`
           : `<div class="hf-copy" style="color:${d.footer_color};font-weight:${d.footer_weight||'normal'};justify-content:${toJustify(d.footer_alignment)};font-size:${num(d.footer_copy_size,14)}px">${d.footer_text||""}</div>
              <nav class="hf-nav" style="justify-content:${toJustify(d.nav_alignment_footer)};color:${d.nav_color_footer};font-weight:${d.nav_weight_footer};font-size:${num(d.footer_nav_size,14)}px">${items}</nav>`);
+
       $("#site-footer").innerHTML = `
-        <div class="${cls}" style="${ff}
-            --gap:${num(d.link_spacing,16)}px;
-            background:${backgroundShorthand} !important;
-            background-color:${bgColor} !important;
-            background-image:${bgImage==='none'?'none':bgImage} !important;
-            height:${num(d.bar_height,60)}px; padding:${padding};">
-          ${inner}
+        <div class="hf-bg" style="background:${backgroundShorthand} !important;background-color:${bgColor} !important;background-image:${bgImage==='none'?'none':bgImage} !important;">
+          <div class="container">
+            <div class="${cls}" style="${ff};--gap:${num(d.link_spacing,16)}px; padding:${paddingY}; height:${num(d.bar_height,60)}px;">
+              ${inner}
+            </div>
+          </div>
         </div>`;
+
       if(d.footer_fixed){
-        const el=$("#site-footer").firstElementChild;
-        el.style.position="fixed"; el.style.left="0"; el.style.right="0"; el.style.bottom="0";
+        const wrap=$("#site-footer").firstElementChild;
+        wrap.style.position="fixed"; wrap.style.left="0"; wrap.style.right="0"; wrap.style.bottom="0";
       }
     }
 
     function adjustOffsets(ftr){
-      const footer = $("#site-footer").firstElementChild;
-      // ヘッダーは sticky のままなので top 余白は付けない
-      document.body.style.paddingBottom = (ftr && ftr.footer_fixed && footer)
-        ? footer.getBoundingClientRect().height + "px"
+      const wrap = $("#site-footer").firstElementChild;
+      document.body.style.paddingBottom = (ftr && ftr.footer_fixed && wrap)
+        ? wrap.getBoundingClientRect().height + "px"
         : "";
     }
 
