--- a/index.html
+++ b/index.html
@@ -6,34 +6,56 @@
   <title>WaJu - 公開ページ</title>
   <meta name="color-scheme" content="light dark">
   <style>
-    :root{--container:1120px}
+    :root{--container:1120px; --gap:16px; --shadow:0 10px 25px rgba(0,0,0,.18)}
     *{box-sizing:border-box}
     body{margin:0;font-family:system-ui,-apple-system,'Segoe UI',Roboto,'Helvetica Neue',Arial,'Noto Sans JP','Hiragino Kaku Gothic ProN',Meiryo,sans-serif;color:#0f172a;background:#fff}
     a{color:inherit;text-decoration:none}
     main{min-height:40vh}
     .container{max-width:var(--container);margin:0 auto;padding:0 16px}
     .hf-wrap{width:100%}
-    .hfbar{display:flex;align-items:center;gap:var(--gap,16px);width:100%;padding:8px 0}
+    .hfbar{display:flex;align-items:center;gap:var(--gap);width:100%;padding:8px 0}
     .hfbar.hf-row{justify-content:flex-start}
     .hfbar.hf-column{flex-direction:column;align-items:stretch}
     .hf-brand{display:flex;align-items:center;gap:8px}
-    .hf-nav{display:flex;gap:var(--gap,16px);flex-wrap:wrap;width:100%}
+    .hf-nav{display:flex;gap:var(--gap);flex-wrap:wrap;width:100%}
     .slot{display:flex;align-items:center}
     .slot.brand{flex:0 0 auto}
     .slot.nav{flex:1 1 auto}
     .hf-copy{display:flex;width:100%}
-    /* demo content */
     .dummy{background:#f8fafc;border:1px solid #e2e8f0;border-radius:12px;padding:24px;margin:16px auto}
-    @media (max-width:640px){
+    /* Mobile nav trigger */
+    .hamburger{display:none;appearance:none;border:none;background:transparent;cursor:pointer;padding:8px;border-radius:10px}
+    .hamburger:focus-visible{outline:2px solid #93c5fd;outline-offset:2px}
+    .hamburger .bar{display:block;width:22px;height:2px;background:currentColor;margin:4px 0;border-radius:2px}
+    /* Drawer */
+    .drawer{position:fixed;inset:0;pointer-events:none}
+    .drawer .overlay{position:absolute;inset:0;background:rgba(0,0,0,.35);opacity:0;transition:opacity .24s ease}
+    .drawer .panel{position:absolute;top:0;right:0;height:100%;width:min(86vw,380px);background:#fff;transform:translateX(100%);
+      transition:transform .24s ease;box-shadow:var(--shadow);display:flex;flex-direction:column}
+    .drawer[aria-hidden="false"]{pointer-events:auto}
+    .drawer[aria-hidden="false"] .overlay{opacity:1}
+    .drawer[aria-hidden="false"] .panel{transform:none}
+    .drawer .panel header{padding:14px 16px;border-bottom:1px solid #e5e7eb;display:flex;justify-content:space-between;align-items:center}
+    .drawer .panel header .title{font-weight:700}
+    .drawer .panel nav{padding:10px 8px;display:flex;flex-direction:column;gap:8px;overflow:auto}
+    .drawer .panel nav a{padding:12px 10px;border-radius:10px}
+    .drawer .panel nav a:hover{background:#f1f5f9}
+    /* Responsive */
+    @media (max-width:768px){
       .container{padding:0 12px}
       :root{--container:100%}
+      /* Hide header nav; show hamburger */
+      .slot.nav{display:none}
+      .hamburger{display:block;margin-left:auto}
+      /* Hide footer nav; show only copyright */
+      #site-footer .hf-nav{display:none !important}
     }
   </style>
 </head>
 <body>
   <header id="site-header" class="hf-wrap"></header>
   <main id="page-content">
-    <div class="container">
+    <div class="container" id="content-container">
       <div class="dummy">
         <h2>ダミーセクション</h2>
         <p>ここにページ編集の内容が反映されます（フック用意済み）。</p>
@@ -41,6 +63,20 @@
     </div>
   </main>
   <footer id="site-footer" class="hf-wrap"></footer>
+
+  <!-- Mobile drawer (右から) -->
+  <div id="mobile-drawer" class="drawer" aria-hidden="true">
+    <div class="overlay" data-close></div>
+    <div class="panel" role="dialog" aria-modal="true" aria-labelledby="drawer-title">
+      <header>
+        <div class="title" id="drawer-title">メニュー</div>
+        <button class="hamburger" id="drawer-close" aria-label="閉じる">
+          <span class="bar"></span><span class="bar"></span><span class="bar"></span>
+        </button>
+      </header>
+      <nav id="drawer-nav" aria-label="モバイルメニュー"></nav>
+    </div>
+  </div>
 
   <script type="module">
     const { createClient } = await import("https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm");
@@ -60,20 +96,27 @@
       return {bgColor:col, bgImage:"none"};
     };
 
+    let allMenus = [];
+
     async function load(){
       const [{data:menus},{data:hdr},{data:ftr}] = await Promise.all([
         sb.from("public_menus").select("*").order("sort_order", {ascending:true}),
         sb.from("hf_settings").select("*").eq("area","header").single(),
         sb.from("hf_settings").select("*").eq("area","footer").single()
       ]);
-      renderHeader(hdr||{}, menus||[]);
-      renderFooter(ftr||{}, menus||[]);
-      adjustOffsets(ftr||{}); // 上余白は不要（ヘッダー sticky）
+      allMenus = menus||[];
+      renderHeader(hdr||{}, allMenus);
+      renderFooter(ftr||{}, allMenus);
+      buildDrawer(allMenus, ftr||{});
+      adjustOffsets(ftr||{});
       window.addEventListener('resize', ()=>adjustOffsets(ftr||{}));
+      // 初回コンテンツ
+      const first = (allMenus.find(m=>m.is_active && m.show_in_footer) || allMenus[0]);
+      if(first){ await loadMainFromMenu(first); }
     }
 
     function renderHeader(d, menus){
-      const items = (menus||[]).filter(m=>m.is_active && m.show_in_header).map(m=>`<a href="${m.href||'#'}">${m.title}</a>`).join("");
+      const items = (menus||[]).filter(m=>m.is_active && m.show_in_header).map(m=>`<a data-menu-id="${m.id||""}" href="${m.href||'#'}">${m.title}</a>`).join("");
       const {bgColor,bgImage} = bgParts(d, "#0f172a");
       const ff = d.header_font_family ? `font-family:${withFallback(d.header_font_family)};` : "";
       const cls = d.layout_mode==="column" ? "hfbar hf-column" : "hfbar hf-row";
@@ -92,8 +135,11 @@
                 </div>
               </div>
               <div class="slot nav">
-                <nav class="hf-nav" style="justify-content:${toJustify(d.nav_alignment)};color:${d.nav_color};font-weight:${d.nav_weight};font-size:${num(d.header_nav_size,14)}px">${items}</nav>
+                <nav class="hf-nav" id="desktop-nav" style="justify-content:${toJustify(d.nav_alignment)};color:${d.nav_color};font-weight:${d.nav_weight};font-size:${num(d.header_nav_size,14)}px">${items}</nav>
               </div>
+              <button id="hamburger" class="hamburger" aria-controls="mobile-drawer" aria-expanded="false" aria-label="メニューを開く">
+                <span class="bar"></span><span class="bar"></span><span class="bar"></span>
+              </button>
             </div>
           </div>
         </div>`;
@@ -102,10 +148,27 @@
         const wrap=$("#site-header").firstElementChild;
         wrap.style.position="sticky"; wrap.style.top="0"; wrap.style.zIndex="5";
       }
+      // クリックで中身差し替え（PC）
+      const nav = $("#desktop-nav");
+      if(nav){
+        nav.addEventListener("click", async (e)=>{
+          const a = e.target.closest("a");
+          if(!a) return;
+          e.preventDefault();
+          const id = a.getAttribute("data-menu-id");
+          const m = allMenus.find(mm => String(mm.id||"") === String(id));
+          await loadMainFromMenu(m || {title:a.textContent, href:a.getAttribute("href")});
+        });
+      }
+      // ハンバーガー
+      const btn = $("#hamburger");
+      if(btn){
+        btn.addEventListener("click", ()=> openDrawer());
+      }
     }
 
     function renderFooter(d, menus){
-      const items = (menus||[]).filter(m=>m.is_active && m.show_in_footer).map(m=>`<a href="${m.href||'#'}">${m.title}</a>`).join("");
+      const items = (menus||[]).filter(m=>m.is_active && m.show_in_footer).map(m=>`<a data-menu-id="${m.id||""}" href="${m.href||'#'}">${m.title}</a>`).join("");
       const {bgColor,bgImage} = bgParts(d, "#0f172a");
       const ff = d.footer_font_family ? `font-family:${withFallback(d.footer_font_family)};` : "";
       const cls = d.layout_mode==="row" ? "hfbar hf-row" : "hfbar hf-column";
@@ -114,12 +177,12 @@
 
       const inner = d.layout_mode==="row"
         ? `<div class="hf-copy" style="color:${d.footer_color};font-weight:${d.footer_weight||'normal'};justify-content:${toJustify(d.footer_alignment)};font-size:${num(d.footer_copy_size,14)}px">${d.footer_text||""}</div>
-           <nav class="hf-nav" style="justify-content:${toJustify(d.nav_alignment_footer)};color:${d.nav_color_footer};font-weight:${d.nav_weight_footer};font-size:${num(d.footer_nav_size,14)}px">${items}</nav>`
+           <nav class="hf-nav" id="footer-nav" style="justify-content:${toJustify(d.nav_alignment_footer)};color:${d.nav_color_footer};font-weight:${d.nav_weight_footer};font-size:${num(d.footer_nav_size,14)}px">${items}</nav>`
         : (d.layout_mode==="nav-top"
-          ? `<nav class="hf-nav" style="justify-content:${toJustify(d.nav_alignment_footer)};color:${d.nav_color_footer};font-weight:${d.nav_weight_footer};font-size:${num(d.footer_nav_size,14)}px">${items}</nav>
+          ? `<nav class="hf-nav" id="footer-nav" style="justify-content:${toJustify(d.nav_alignment_footer)};color:${d.nav_color_footer};font-weight:${d.nav_weight_footer};font-size:${num(d.footer_nav_size,14)}px">${items}</nav>
              <div class="hf-copy" style="color:${d.footer_color};font-weight:${d.footer_weight||'normal'};justify-content:${toJustify(d.footer_alignment)};font-size:${num(d.footer_copy_size,14)}px">${d.footer_text||""}</div>`
           : `<div class="hf-copy" style="color:${d.footer_color};font-weight:${d.footer_weight||'normal'};justify-content:${toJustify(d.footer_alignment)};font-size:${num(d.footer_copy_size,14)}px">${d.footer_text||""}</div>
-             <nav class="hf-nav" style="justify-content:${toJustify(d.nav_alignment_footer)};color:${d.nav_color_footer};font-weight:${d.nav_weight_footer};font-size:${num(d.footer_nav_size,14)}px">${items}</nav>`);
+             <nav class="hf-nav" id="footer-nav" style="justify-content:${toJustify(d.nav_alignment_footer)};color:${d.nav_color_footer};font-weight:${d.nav_weight_footer};font-size:${num(d.footer_nav_size,14)}px">${items}</nav>`);
 
       $("#site-footer").innerHTML = `
         <div class="hf-bg" style="background:${backgroundShorthand} !important;background-color:${bgColor} !important;background-image:${bgImage==='none'?'none':bgImage} !important;">
@@ -134,6 +197,81 @@
         const wrap=$("#site-footer").firstElementChild;
         wrap.style.position="fixed"; wrap.style.left="0"; wrap.style.right="0"; wrap.style.bottom="0";
       }
+
+      // クリックで中身差し替え（PCフッター）
+      const fnav = $("#site-footer #footer-nav");
+      if(fnav){
+        fnav.addEventListener("click", async (e)=>{
+          const a = e.target.closest("a");
+          if(!a) return;
+          e.preventDefault();
+          const id = a.getAttribute("data-menu-id");
+          const m = allMenus.find(mm => String(mm.id||"") === String(id));
+          await loadMainFromMenu(m || {title:a.textContent, href:a.getAttribute("href")});
+        });
+      }
+    }
+
+    /* Drawer: build & control */
+    function buildDrawer(menus, footerRow){
+      const list = (menus||[]).filter(m=>m.is_active && (m.show_in_footer || menus.every(x=>!x.show_in_footer)));
+      const nav = $("#drawer-nav");
+      nav.innerHTML = list.map(m => `<a data-menu-id="${m.id||""}" href="${m.href||'#'}">${m.title}</a>`).join("");
+      nav.addEventListener("click", async (e)=>{
+        const a = e.target.closest("a"); if(!a) return;
+        e.preventDefault();
+        const id = a.getAttribute("data-menu-id");
+        const m = menus.find(mm => String(mm.id||"") === String(id));
+        await loadMainFromMenu(m || {title:a.textContent, href:a.getAttribute("href")});
+        closeDrawer();
+      });
+
+      // close handlers
+      $("#drawer-close").addEventListener("click", closeDrawer);
+      $("#mobile-drawer [data-close]").addEventListener("click", closeDrawer);
+      document.addEventListener("keydown", (e)=>{ if(e.key==="Escape") closeDrawer(); });
+    }
+
+    function openDrawer(){
+      const d = $("#mobile-drawer");
+      d.setAttribute("aria-hidden","false");
+      $("#hamburger")?.setAttribute("aria-expanded","true");
+      document.body.style.overflow="hidden";
+      // focus
+      setTimeout(()=> $("#drawer-nav a")?.focus(), 30);
+    }
+    function closeDrawer(){
+      const d = $("#mobile-drawer");
+      d.setAttribute("aria-hidden","true");
+      $("#hamburger")?.setAttribute("aria-expanded","false");
+      document.body.style.overflow="";
+      $("#hamburger")?.focus();
+    }
+
+    /* Content loader (hook-ready) */
+    async function loadMainFromMenu(menu){
+      const container = $("#content-container");
+      const title = menu?.title || "ページ";
+      const href = (menu?.href||"").trim();
+
+      // 同一オリジンの相対HTMLなら fetch して差し替え
+      const isRelative = href && !/^https?:\/\//i.test(href);
+      if(isRelative){
+        try{
+          const res = await fetch(href, {cache:"no-store"});
+          if(res.ok){
+            const html = await res.text();
+            container.innerHTML = html;
+            return;
+          }
+        }catch(err){ /* fallthrough */ }
+      }
+      // フック（将来：DB or APIからリッチ本文を取得して差し替え）
+      container.innerHTML = `
+        <div class="dummy">
+          <h2>${title}</h2>
+          <p>ここに「${title}」のコンテンツを表示します（コンテンツ編集と連携予定）。</p>
+        </div>`;
     }
 
     function adjustOffsets(ftr){
