--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>WaJu - 公開ページ</title>
+  <title>合同会社ＷａＪｕ</title>
   <meta name="color-scheme" content="light dark">
   <style>
     :root{--container:1120px; --gap:16px; --shadow:0 10px 25px rgba(0,0,0,.18)}
