--- a/index.html
+++ b/index.html
@@ -1,6 +1,20 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
+  <link rel="icon" type="image/png" sizes="32x32"
+      href="https://htnmjsqgoapvuanrsuma.supabase.co/storage/v1/object/public/assets/favicon-32x32.png?v=1">
+  <link rel="icon" type="image/png" sizes="16x16"
+        href="https://htnmjsqgoapvuanrsuma.supabase.co/storage/v1/object/public/assets/favicon-16x16.png?v=1">
+  <link rel="apple-touch-icon" sizes="180x180"
+        href="https://htnmjsqgoapvuanrsuma.supabase.co/storage/v1/object/public/assets/apple-touch-icon.png?v=1">
+  <link rel="icon"
+        href="https://htnmjsqgoapvuanrsuma.supabase.co/storage/v1/object/public/assets/favicon.ico?v=1">
+  
+  <!-- PWA/Android を整えるなら（任意） -->
+  <link rel="manifest"
+        href="https://htnmjsqgoapvuanrsuma.supabase.co/storage/v1/object/public/assets/site.webmanifest?v=1">
+<meta name="theme-color" content="#0f172a">
+
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>合同会社ＷａＪｕ</title>
